[package]
name = "zen2han"
version = "0.1.1"
authors = ["YUUKIToriyama <github@toriyama.dev>"]
description = "WASM module which convert full-width character to half-width character"
repository = "https://github.com/YUUKIToriyama/han2zen"
license = "MIT"
edition = "2018"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
wasm-bindgen = "0.2.73"
